# chiper8

./: Cargo.toml  build.rs  microa.txt
.cargo/: config.toml
asm/: test
lib/assembler/src/: assembly.rs  lib.rs  operands.rs  tokenizer.rs
lib/disassembler/: Cargo.toml
lib/paths/src/: lib.rs
simulator/: Cargo.toml
simulator/src/: state.rs
src/: main.rs
verilog/include/: defs.sv
verilog/rtl/: dcache.sv  icache.sv  microa.sv  wrapper.sv
