[package]
name = "chiper8"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]

[build-dependencies]
walkdir = "2.3.2"
paths = { path = "lib/paths" }
assembler = { path = "lib/assembler" }
disassembler = { path = "lib/disassembler" }

[workspace]
members = [
    "lib/assembler",
    "lib/disassembler",
    "lib/paths",
    "simulator",
]


